<resources>
    <string name="app_name">UMovies</string>
    
    <string name="API_KEY"></string>
    <string name="DATA_SINGLE_MOVIE_URL">http://api.themoviedb.org/3/movie/</string>
    <string name="DATA_BASE_URL">http://api.themoviedb.org/3/movie/</string>
    <string name="PARAM_POPULAR">popular</string>
    <string name="PARAM_TOP_RATED">top_rated</string>
    <string name="QUERY_STR">"api_key"</string>

    <string name="no_movies_message1">No movies to show.</string>
    <string name="no_movies_message2">Please try later.</string>

    <string name="no_network">No Internet. Please try again later.</string>
    <string name="http_fail_msg">Something went wrong. Please try again later.</string>

    <!-- Details -->
    <string name="rating_lbl">Rating</string>
    <string name="release_date_lbl">Release Date</string>
    <string name="runtime_lbl">Runtime</string>
    <string name="revenue_lbl">Revenue</string>
    <string name="synopsis_lbl">Synopsis</string>
    <string name="reviews_lbl">Reviews</string>
    <string name="details_lbl">Details</string>
    <string name="share_lbl">Share</string>

    <!-- Details Dummy Text -->
    <string name="dummy_movie_name">The Awesome Movie Name</string>
    <string name="dummy_movie_tagline">To be or not to be. That is the question.</string>
    <string name="dummy_movie_synopsis">Brief condensation, outline, or summary of the main points of an articles, book, or plan.
        Unlike an abstract, a synopsis maintains the point by point sequence of the salient ideas.</string>
    <string name="dummy_movie_rating">4.5/5</string>
    <string name="dummy_movie_release_date">2016-11-28</string>
    <string name="dummy_movie_runtime">1 hr. 30 min.</string>
    <string name="dummy_movie_revenue">$7.8M</string>
    <string name="dummy_movie_genres">Action   Drama   Comedy</string>
    <string name="dummy_movie_votes">(166 votes)</string>

    <string-array name="tab_titles">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="popular">Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="favorites">Favorites Movies</string>
    <string name="popular_key">popular_movies_key</string>
    <string name="top_rated_key">top_rated_key</string>
    <string name="favorites_key">favorites_key</string>
    <string name="hidden">Hidden</string>
    <string name="shown">Shown</string>
</resources>
