<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/standard_margin">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rating_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/txt_large_size"
            android:text="@string/rating_lbl"
            />
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_lbl"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/txt_regular_size"
            tools:text="@string/dummy_movie_rating"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin">
        <TextView
            android:id="@+id/release_date_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/txt_large_size"
            android:text="@string/release_date_lbl"
            />
        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date_lbl"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/txt_regular_size"
            tools:text="@string/dummy_movie_release_date"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin">
        <TextView
            android:id="@+id/runtime_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/txt_large_size"
            android:text="@string/runtime_lbl"
            />
        <TextView
            android:id="@+id/tv_movie_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/runtime_lbl"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/txt_regular_size"
            tools:text="@string/dummy_movie_runtime"/>
    </RelativeLayout>
</LinearLayout>