<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:id="@+id/ll_container">
    <ImageView
        android:id="@+id/iv_blur_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_bg_overlay" />
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:paddingBottom="@dimen/layout_padding_top">
            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/txt_title_size"
                android:layout_marginTop="@dimen/area_margin_top"
                tools:text="@string/dummy_movie_name"
                />
            <include layout="@layout/details_stars"/>
            <include layout="@layout/details_additional_info"/>
            <include layout="@layout/details_revenue"/>
            <include layout="@layout/details_genres"/>

            <TextView
                android:id="@+id/tv_movie_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_regular_size"
                android:textColor="@color/main_text_color"
                android:layout_marginTop="@dimen/tagline_margin_top"
                tools:text="@string/dummy_movie_tagline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/area_margin_top"
                android:text="@string/synopsis_lbl"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/txt_large_size"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/main_text_color"/>

            <TextView
                android:id="@+id/tv_movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:textSize="@dimen/txt_regular_size"
                android:textColor="@color/main_text_color"
                tools:text="@string/dummy_movie_synopsis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/area_margin_top"
                android:text="@string/images_lbl"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/txt_large_size"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/main_text_color"/>

            <ImageView
                android:id="@+id/iv_tumbnail_img"
                android:layout_width="@dimen/tumbnail_w"
                android:layout_height="@dimen/tumbnail_h"
                android:layout_marginTop="@dimen/standard_margin"
                android:src="@mipmap/logo"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
